The Random Velocity tooltip is wrong #48710

Closed
opened 2016-06-22 15:21:39 +02:00 by Paweł Łyczkowski · 6 comments

Blender Version
2.77

Short description of error
The Random Velocity tooltip states that the setting affects the speed of particles, but the setting affects both the speed and direction.

One solution would be to change the tooltip to say 'velocity', but a better one would be to split the setting into 'direction randomness' and 'speed randomness', since it seems that there are no ways to control the initial speed of particles independently of their direction.

Exact steps for others to reproduce the error
Add plane, add particle system, set Velocity > Normal to 100, and Randomness to 100, notice that not only the speed changes but direction as well.

**Blender Version** 2.77 **Short description of error** The Random Velocity tooltip states that the setting affects the **speed** of particles, but the setting affects both the speed and direction. One solution would be to change the tooltip to say 'velocity', but a better one would be to split the setting into 'direction randomness' and 'speed randomness', since it seems that there are no ways to control the initial speed of particles independently of their direction. **Exact steps for others to reproduce the error** Add plane, add particle system, set Velocity > Normal to 100, and Randomness to 100, notice that not only the speed changes but direction as well.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @PawelLyczkowski-1

Added subscriber: @PawelLyczkowski-1

Added subscriber: @mont29

Added subscriber: @mont29

All tooltips in this panel are wrong, all using 'speed' instead of 'velocity'… Will fix.

All tooltips in this panel are wrong, all using 'speed' instead of 'velocity'… Will fix.
Bastien Montagne self-assigned this 2016-06-23 13:06:53 +02:00

This issue was referenced by 097611a92a

This issue was referenced by 097611a92a48e5dc45cd9b7d2f5d2c4edb364207

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48710
No description provided.