Fix T48710: 'velocity' particle settings were incorrectly using 'speed' in their tooltips.

Not the same thing, velocity is a vector conveying both speed *and* direction...